--- a/portfolio/index.css
+++ b/portfolio/index.css
@@ -209,7 +209,7 @@ p {
     background-color: #111;
     color: white;
     height: 30;
-    border-top: 3rem;
+    Padding: 3rem;
 }
 
 .footer-container {
