--- a/portfolio/index.css
+++ b/portfolio/index.css
@@ -1,34 +1,45 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-*{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
   padding: 0;
-  margin: 0;
+    margin : 0;
+    box-sizing:border-box;
 }
+
 html {
     font-size: 62.5%;
+   
 }
 body {
   font-family: "Poppins", sans-serif;
   font-style: normal;
+  background-color: #444;
 }
-a{
+ul li a{
     text-decoration: none;
     color:black;
     transition: all 0.3s ease;
+    position: relative;
+;
 }
-a:hover {
-    color: darkorange;
-    text-decoration: underline;
-    text-underline-offset: 1rem;
-    text-decoration-color: darkorange;
-
+ul li a::before {
+   content: '';
+   width: 0;
+   height: 0.4rem;
+   background-color: darkorange;
+   position: absolute;
+   left: 0rem;
+   bottom: -0.6rem;
+   transition: 0.5s;
+}
+ul li:hover a::before {
+    width: 100%;
 }
 .navbar {
     display: flex;
     align-items: center;
     height: 7rem;
-    padding: 0rem 7rem;
+    padding: 0rem 3rem;
 }
 .logo {
     width: 40%;
@@ -101,6 +112,7 @@ p {
 .buttons > :nth-child(1):hover {
     background-color: black;
     color: white;
+    transform: translatey(-0.3rem);
     
 }
 .buttons > :nth-child(2) {
@@ -117,7 +129,7 @@ p {
 .buttons > :nth-child(2):hover {
     background-color: darkorange;
     border-color: darkorange;
-
+    transform: translatey(-0.3rem);
 }
 .social {
     display: flex;
@@ -199,6 +211,37 @@ p {
     width: 80%;
 
 }
+
+
+/* section 3*/
+
+
+.sec-3 {
+    background-color: aqua;
+    padding: 20rem 0px;;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.sec-3-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.sec-3-2 {
+   display: flex;
+   gap:5rem;
+}
+.box3 {
+    width: 35rem;
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box3 img {
+    width: 30rem;
+} 
 
 
    /* footer  */
