--- a/portfolio/index.css
+++ b/portfolio/index.css
@@ -44,7 +44,7 @@ ul li:hover a::before {
 }
 .logo {
     width: 40%;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 600;
     color: darkorange;
 }
@@ -57,6 +57,18 @@ ul li:hover a::before {
 .menu-bar li{
     font-size: 2rem;
 }
+.navbar-menu{
+    display: none;
+}
+@media(max-width: 767px) {
+    .navbar{
+        display: none;
+    }
+    .navbar-menu{
+        display: flex;
+    }
+}
+
 
        /* section 1 */
 
@@ -157,6 +169,17 @@ p {
     background-color: lawngreen;
     padding: 7rem 0px;
 }
+@media(max-width:52.1875) {
+    .sec2 {
+        flex-direction: row;
+    }
+    .sec-2-1 {
+        flex-direction: column;
+    }
+    .sec-2-2 {
+        flex-direction: column;
+    }
+}
 .sec-2-1 {
     display: flex;
     flex-direction: column;
@@ -186,10 +209,12 @@ p {
     flex-direction: column;
     gap: 3rem;
 }
+
 .sec-2-2-2-1 {
     display: flex;
     gap: 5rem;
 }
+
 .box{
     display: flex;
     flex-direction: column;
@@ -200,6 +225,7 @@ p {
     padding: 2rem;
     gap: 0.5rem;
 }
+
 .box img {
     width: 3.5rem;
 }
@@ -216,6 +242,51 @@ p {
 
 }
 
+/* media for phone */
+
+@media(max-width: 767px) {
+    .sec2{
+        height: 100%;
+    }
+    .sec-2-2 {
+    flex-direction: column;
+    }
+   .sec-2-2-1 img {
+    width: 25rem;
+    height: 25rem;
+}
+    .sec-2-2-1 {
+    margin-left: 0;
+}   
+    .sec-2-2-2 {
+     align-items: center;
+    }
+
+    .sec-2-2-2-1 {
+    flex-direction: column;
+    }
+}
+
+/*media for tab*/
+
+
+@media(max-width: 1024px) {
+    .sec2{
+        height: 100%;
+    }
+    .sec-2-2 {
+    flex-direction: column;
+    }
+
+    .sec-2-2-1 {
+    margin-left: 0;
+}   
+    .sec-2-2-2 {
+     align-items: center;
+    }
+}
+
+
 
 /* section 3*/
 
@@ -226,7 +297,12 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 7rem;
+    gap: 6rem;
+}
+@media(max-width:52.1875rem) {
+    .sec-3 {
+        flex-direction: column;
+    }
 }
 .sec-3-1 {
     display: flex;
@@ -241,6 +317,11 @@ p {
    display: flex;
    gap:5rem;
 }
+@media(max-width:52.1875rem) {
+    .sec-3-2 {
+        flex-direction: column;
+    }
+}
 .box3 {
     width: 35rem;
     border: 2px solid black;
@@ -251,6 +332,7 @@ p {
     padding: 2rem;
     gap: 1.5rem;
 }
+
 .box3 img {
     width: 30rem;
     border-radius: 14px;
@@ -267,6 +349,51 @@ p {
     font-weight: 600;
 }
 
+/*media for phone*/
+
+
+
+@media(max-width:767px) {
+    .sec-3{
+        flex-direction: column;
+    }
+  .sec-3-2 {
+      flex-direction: column;
+      gap: 2rem;
+    }  
+    .box3 {
+      width: 25rem;
+    }  
+    .box3 img {
+      width: 20rem;
+    } 
+    .box3-2 > :nth-child(1) {
+      font-size: 1.5rem; 
+    }  
+
+}
+
+
+/*media for tab*/
+
+
+
+@media(max-width:1024px) {
+    .sec-3-2{
+        flex-direction: column;
+    }
+    .box3 {
+    width: 50rem;
+    gap: 2rem;
+}
+
+.box3 img {
+    width: 45rem;
+} 
+.box3-2 > :nth-child(1) {
+    font-size: 3rem;
+}
+
 
    /*  SECTION 4*/
 
@@ -279,6 +406,8 @@ p {
     gap: 6rem;
     padding: 10rem 0px;
 }   
+
+ 
 .sec4-1{
     display: flex;
     flex-direction: column;
@@ -293,6 +422,7 @@ p {
     display: flex;
     align-items: center;
 }
+
 .box4 {
     width: 35rem;
     border: 2px solid black;
@@ -303,11 +433,63 @@ p {
     padding: 2rem;
     gap: 50rem;
 }
+
 .box4 img {
     width: 30rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 5px;
     border-radius: 14px;
 }
+
+
+ /* media for phone */
+
+@media(max-width:767px) {
+    .sec4{
+        flex-direction: column;
+    }
+    .sec4-2{
+        flex-direction:column;
+        gap: 2rem;
+    }
+    .box4 img {
+        width: 20rem;
+    }
+    .box4 {
+    width: 25rem;
+    padding: 1rem;
+    }
+    .sec4-1{
+    flex-direction: column;
+    }
+    h1 {
+    font-size: 4rem;
+    }
+}
+
+
+
+ /* media for tab */
+
+@media(max-width: 1024px) {
+    .sec4{
+        flex-direction: column;
+    }
+    .sec4-2{
+        flex-direction:column;
+        gap: 4rem;
+    }
+    .box4 img {
+        width: 40rem;
+    }
+    .box4 {
+    width: 50rem;
+    padding: 3rem;
+    }
+
+}
+
+
+
 
    /* footer  */
 
@@ -331,9 +513,15 @@ p {
     justify-content: space-between;
     padding: 6rem 0rem;
 }
+@media(max-width:52.1875rem) {
+    .foot-info{
+        flex-direction:column;
+    }
+}
 .author{
     max-width: 50rem;
 }
+
 .author-1{
     font-size: 1.5rem;
     line-height: 1.7;
@@ -348,10 +536,18 @@ p {
 
 .social-footer {
     margin-bottom: 5rem;
+    order: 1;
+
 }
+@media(max-width: 800PX) {
+     .social-footer{
+        order: -1;
+     }
+}
+
 .social-heading {
-    font-size: 2.2rem;
-    letter-spacing: 0.1rem;
+    font-size: 2rem;
+    letter-spacing: 1px;
 }
 .social-imgs {
     width: 2.5rem;
@@ -364,4 +560,10 @@ p {
     font-size: 1.2rem;
     border-top: 1px solid #444;
     padding: 4rem 0;
+}
+@media(max-width:767px) {
+    .copyright {
+        font-size: 1rem;
+    }
+
 }
